mac-app-init/crates/tui/tests/snapshots/tui_e2e__section_menu_cards_focused.snap
---
source: crates/tui/tests/tui_e2e.rs
expression: output
---
"┌ mac-app-init ────────┐┌ 서비스 카드 ─────┐┌ Cards ───────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (31, " "), (34, " "), (36, " ")]
"│ 인입                 ││ Cards            ││▸ synology                       smb://ai@192.168.2.15:445                │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   📋 도메인 현황     ││ Actions          ││  truenas                        smb://smb_admin@192.168.2.5:445          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│ 인프라               ││ 안내             ││  proxmox                        ssh://root@192.168.2.50:22               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (27, " "), (29, " ")]
"│   🔑 서비스 카드     ││                  ││                                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " ")]
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  │└──────────────────────────────────────────────────────────────────────────┘"
"│                      ││                  │┌──────────────────────────────────────────────────────────────────────────┐"
"│                      ││                  ││  mai run env --help                                                      │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"│                      ││                  ││                                                                          │"
"└──────────────────────┘└──────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"↑↓ 섹션 │ Enter/→ 콘텐츠 │ ←/Esc 뒤로 │ r 새로고침                                                                      " Hidden by multi-width symbols: [(4, " "), (6, " "), (19, " "), (21, " "), (23, " "), (34, " "), (36, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
